modules/lb_security_group/main.tf
resource "aws_security_group" "elb" {
  name = "${var.name}-elb-sg"
  description = "Security group for the ${var.name} ELB"
  vpc_id = var.vpc_id
}

resource "aws_security_group_rule" "allow_inbound_http" {
  type = "ingress"
  from_port = "80"
  to_port = "80"
  protocol = "tcp"
  cidr_blocks = ["0.0.0.0/0"]
  security_group_id = aws_security_group.elb.id
}

resource "aws_security_group_rule" "allow_inbound_https" {
  type = "ingress"
  from_port = "443"
  to_port = "443"
  protocol = "tcp"
  cidr_blocks = ["0.0.0.0/0"]
  security_group_id = aws_security_group.elb.id
}

resource "aws_security_group_rule" "allow_inbound_hec" {
  type = "ingress"
  from_port = "9997"
  to_port = "9997"
  protocol = "tcp"
  cidr_blocks = ["0.0.0.0/0"]
  security_group_id = aws_security_group.elb.id
}

resource "aws_security_group_rule" "allow_all_outbound" {
  type = "egress"
  from_port = 0
  to_port = 0
  protocol = "-1"
  cidr_blocks = ["0.0.0.0/0"]
  security_group_id = aws_security_group.elb.id
}
